# zzqStudy

./: README.md
C++/C++STL/: README.md
C++/C++Socket/: README.md
C++/C++Thread/: README.md
C++/C++base/: README.md
C++/C++class/: README.md
C++/C++friend/: README.md
C++STL/: README.md
C++base/: README.md
C++class/: README.md
C++exception/: README.md
C++operaOvlod/: README.md
C++stream/: README.md
DesignPattern/: README.md
eight-part/: 1.cpp  2.cpp  README.md  tmp
kinglyWay-dataStructure/: README.md
kinglyWay-operatingSystem/: README.md
project/1_ffmpeg/: CMakeLists.txt  README.md  WORKREADME.md  transcode copy 2.cpp  transcode copy.cpp  transcode.cpp
project/1_ffmpeg/lib/: build.sh
project/1_ffmpeg/lib/include/: circularbuffer.h  manageAll.h  queue.h
project/1_ffmpeg/lib/include/libavutil/: ffversion.h
project/1_ffmpeg/src/: audioAnalysis.cpp  audioFrameEncoding.cpp  initGlobalVariable.cpp  productionPackage.cpp  videoAnalysis.cpp  videoFrameEncoding.cpp  videoOutMP4File.cpp
project/5_tinyWebServer/: CMakeLists.txt  README.md  main  main.cpp
project/5_tinyWebServer/cppcode/: buffer.cpp  epoller.cpp  heaptimer.cpp  httpconn.cpp  httprequest.cpp  httpresponse.cpp  log.cpp  sqlconnpool.cpp  webserver.cpp
project/5_tinyWebServer/include/: buffer.h  epoller.h  heaptimer.h  httpconn.h  httprequest.h  httpresponse.h  log.h  sqlconnpool.h  threadpool.h  webserver.h
project/5_tinyWebServer/resources/: 400.html  403.html  405.html  error.html  index.html  login.html  picture.html  register.html  video.html  welcome.html
(+387 files in other folders)
